# SCTT

./: .gitignore  BUSINESS_CASE_ESSAY.md  BUSINESS_PLAN.md  CLAUDE.md  CLAUDE_OPUS_DEVELOPMENT_GUIDE.md  CNAME  Cargo.toml  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  Dockerfile  HOW_TO_CONTRIBUTE.md  LICENSE  LITERATURE_REVIEW.md  README.md  SCTT-firstChat-2025-09-02-this-session-is-being-continued-from-a-previous-co.txt  Trunk.toml  book.toml  deploy-wasmer.sh  download_papers.sh  index.html  minimal-server.rs  netlify.toml  package.json  run.sh  sctt-server  vercel.json
.github/workflows/: deploy.yml  pages.yml
book/: README.md  SUMMARY.md  chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  index.md  sctt-book.tex
content/posts/: 001-getting-started.md  002-research-log.md
docs/: GITHUB_PAGES_SETUP.md  index.md
docs/guides/: CAPABILITIES_AND_THEORY.md  CHALLENGES_DEEP_DIVE.md  CLAUDE.md  DESIGN.md  FEASIBILITY.md  IMPLEMENTATION.md  MATHLIB4_INTEGRATION.md  MATHLIB4_SIGNIFICANCE.md  MATH_BACKGROUND.md  PLAIN_ENGLISH_GUIDE.md  PREPARATION_ROADMAP.md  PROBLEM_SETS.md  PROJECT_STRUCTURE.md  RESEARCH_NOTEBOOK.md  SCTT_SUPERPOWERS.md  START_HERE.md  THEORY.md
papers/: FOCUSED_LITERATURE_ANALYSIS.md  IMPLEMENTATION_EXTRACTION.md  READING_NOTES.md
python/: math_workshop.py  requirements.txt
python/playground/: smooth_playground.py  starter_math_and_code.py
python/src/checker/: type_checker.py
rust/: Cargo.toml  Leptos.toml  README.md  build-wasm.sh  build.sh
rust/sctt-checker/: Cargo.toml
rust/sctt-checker/src/: lib.rs
rust/sctt-core/: Cargo.toml
rust/sctt-core/src/: lib.rs
rust/sctt-cubical/: Cargo.toml
rust/sctt-cubical/src/: lib.rs
rust/sctt-game/: Cargo.toml
rust/sctt-game/src/: main.rs
rust/sctt-playground/: Cargo.toml
rust/sctt-playground/src/: main.rs
rust/sctt-server/: Cargo.toml
rust/sctt-server/src/: blog.rs  main.rs  playground.rs
rust/sctt-server/src/api/: blog.rs  mod.rs
rust/sctt-smooth/: Cargo.toml
rust/sctt-smooth/src/: lib.rs
rust/sctt-wasm/: Cargo.toml
rust/sctt-wasm/src/: lib.rs
rust/sctt-web/: Cargo.toml
rust/sctt-web/src/: lib.rs  state.rs
rust/sctt-web/src/components/: mod.rs  path_viewer.rs  playground.rs  smooth_visualizer.rs  type_checker.rs
rust/sctt-web/src/pages/: about.rs  blog.rs  home.rs  lab.rs  landing.rs  learn.rs  mod.rs  playground.rs  reference.rs  theory.rs
rust/style/: main.scss
scripts/: setup.sh  setup_proof_tools.sh
src/: collaborative.rs  lib.rs  proof_assistant.rs  sctt_to_wasm.rs  sctt_typechecker.rs  visualization.rs  web_interface.rs
static/: 404.html  index.html  robots.txt  sitemap.xml
styles/: main.css
