[package]
name = "sctt-system"
version = "0.1.0"
edition = "2021"
authors = ["SCTT Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sctt"
description = "Smooth Cubical Type Theory - Advanced Proof Assistant and Compiler"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# WASM compilation
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-encoder = "0.40"
wasmparser = "0.120"

# Web framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = "0.10"
gloo-timers = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Window",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Storage",
    "Location",
    "History",
    "Performance",
    "PerformanceTiming",
]}

# Server dependencies (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

# Proof assistant features
im = "15.1"  # Immutable data structures
petgraph = "0.6"  # Graph algorithms for proof dependencies
rayon = "1.8"  # Parallel proof checking

# Visualization
egui = "0.24"
eframe = "0.24"
plotters = "0.3"
plotters-canvas = "0.3"

# Cryptography for proof compression
ark-crypto-primitives = "0.4"
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
blake3 = "1.5"

# Database for proof storage
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"], optional = true }

# Testing and benchmarking
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

[features]
default = ["client"]
client = []
server = ["axum", "tokio", "tower", "tower-http", "sqlx"]
visualization = ["egui", "eframe", "plotters", "plotters-canvas"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = true
panic = "abort"

[[bin]]
name = "sctt-server"
required-features = ["server"]

[[bin]]
name = "sctt-cli"
path = "src/bin/cli.rs"