[workspace]
members = [
    "sctt-core",
    "sctt-smooth",
    "sctt-cubical",
    "sctt-checker",
    "sctt-playground",
    "sctt-game", "sctt-server", "sctt-web",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SCTT Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/SCTT"

[workspace.dependencies]
# Math libraries
nalgebra = "0.32"
num-traits = "0.2"
num-complex = "0.4"

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI and interaction
clap = { version = "4.0", features = ["derive"] }
rustyline = "12.0"
colored = "2.0"

# Async runtime (for future parallel checking)
tokio = { version = "1.0", features = ["full"] }

# Testing
proptest = "1.0"
criterion = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = "fat"
