[package]
name = "sctt-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Web framework
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# Leptos integration
leptos = { version = "0.6", features = ["ssr"] }
leptos_actix = { version = "0.6", features = ["ssr"] }
sctt-web = { path = "../sctt-web", features = ["ssr"] }

# Async runtime
tokio = { workspace = true }

# Logging
env_logger = "0.11"
log = "0.4"

# Serialization
serde = { workspace = true }
