[package]
name = "sctt-smooth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sctt-core = { path = "../sctt-core" }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }