[package]
name = "sctt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sctt-core = { path = "../sctt-core" }
sctt-checker = { path = "../sctt-checker" }

[target.wasm32-wasi.dependencies]
wasi = "0.11"